--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="bg-gray-100 min-h-screen flex items-center justify-center">
     <div id="game-container" class="bg-white p-8 rounded-lg shadow-lg max-w-2xl w-full">
-        <img id="header-image" src="assets/images/Functions.png" alt="Game header" class="mx-auto mb-4">
+        <img id="header-image" src="assets/images/ch1_and_ch2_terms.png" alt="Game header" class="mx-auto mb-4">
         <div id="volume-control" class="text-center mb-4">
             <button id="volume-toggle" class="text-2xl">
                 <i class="fas fa-volume-up"></i>
